# blog-recsys

./: .gitignore  README.md  main.py  pyproject.toml  test.db
backend/: db.py  export_to_json.py  main.py  migrate_mock_data.py  models.py  recommendations.py  seed_data.py  test.db  vector_db.py  vector_utils.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  Home.css  Home.jsx  index.css
frontend/src/components/: CreatePost.css  CreatePost.jsx  EditPost.jsx  Header.css  Header.jsx  Home.css  Home.jsx  Item.css  Item.jsx  Pagination.css  Pagination.jsx  PostDetail.css  PostDetail.jsx  PostTags.css  PostTags.jsx  PostsList.jsx  Recommended.css  Recommended.jsx  SmItem.css  SmItem.jsx  Tag.css  Tag.jsx
frontend/src/hooks/: useInteraction.js
frontend/src/services/: api.js
frontend/src/utils/: getRandomItems.js  tagUtils.js
